<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ISmartEdmonton</string>
    <string name="title_settings">Settings</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_aboutus">About us</string>
    <string name="title_update">Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="user_content">user</string>
	<string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">Want to sign up?</string>
    <string name="register_here"><br>Register Here</br></string>
    <string name="login_google_description">Login with Google</string>
    <string name="login_facebook_description">Login with Facebook</string>
    
    <string name="action_home" type="color">Home</string>
    <string name="title_activity_collision">Collision</string>
    <string name="title_activity_traffic">Traffic</string>
    <string name="title_activity_weather">Weather</string>
    <string name="tab_collision">Prediction</string>
    <string name="tab_collision_filter">Filter</string>
    <string name="collisionPlot_title">Collision Prediction</string>
    <string name="collision_filter_mvci">MVCI Collision</string>
    <string name="collision_filter_cad">CAD Collision</string>
    <string name="collision_filter_fatal_injury">Fatal and Injury Collision</string>
    <string name="collision_filter_fatal_major">Fatal and Major Injuries</string>
    <string name="collision_filter_odds">Odds of Fatality Occurrence</string>
    <string name="collision_filter_ok">OK</string>
    <string name="button_filter">Filter</string>
    <string-array name="collision_filter_spinner">
        <item>City Wide</item>
        <item>Downtown</item>
        <item>North Division</item>
        <item>Southeast Division</item>
        <item>Southwest Division</item>
        <item>West Division</item>
    </string-array>
</resources>
