<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cst.aaron.ismartedmonton.LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" 
        android:background="@color/page_background">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" 
            android:layout_marginTop="60dp">

            <LinearLayout 
                android:id="@+id/linear_username"
                style="@style/Login_linear"
                android:padding="6dp">           
                <ImageView 
                    android:layout_width="36dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/user_content"
                    android:src="@drawable/user_icon"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="2dp"
                    android:background="#00000000"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>

            </LinearLayout>
           
			 <LinearLayout
			     android:id="@+id/linear_password"
			     style="@style/Login_linear"
			     android:padding="8dp"
			     android:layout_marginTop="15dp" >

			     <ImageView
			         android:layout_width="36dp"
			         android:layout_height="40dp"
			         android:contentDescription="@string/user_content"
			         android:src="@drawable/password_icon" />

			     <EditText
			         android:id="@+id/password"
			         android:layout_width="fill_parent"
			         android:layout_height="40dp"
			         android:background="#00000000"
			         android:ems="10"
			         android:hint="@string/prompt_password"
			         android:imeActionId="@+id/login"
			         android:imeActionLabel="@string/action_sign_in_short"
			         android:imeOptions="actionUnspecified"
			         android:inputType="textPassword"
			         android:maxLines="1"
			         android:singleLine="true" 
			         android:layout_margin="2dp"/>
			 </LinearLayout>
			 
		 <LinearLayout
		     android:id="@+id/linear_forget"
		     android:layout_width="fill_parent"
		     android:layout_height="42dp"
		     android:orientation="horizontal"
		     android:padding="2dp" 
		     android:layout_marginTop="5dp">
				<CheckBox 
				    android:layout_width="wrap_content"
			         android:layout_height="match_parent"
			         android:layout_margin="2dp" 
			         android:labelFor="@+id/remember_me_label" />
			     <TextView 
			         android:id="@+id/remember_me_label"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:text="@string/remember_me"
			         android:layout_marginLeft="10dp"/>
			     <TextView 
			         android:id="@+id/forget_password"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:text="@string/forget_password"
			         android:paddingLeft="30dp"
			         android:clickable="true"/>
			     		     
			 </LinearLayout> 
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:textSize="22sp"
                android:background="@drawable/sign_in_button_background"
                android:text="@string/action_sign_in_register" 
                />
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginLeft="20dp">
                <TextView 
			         android:id="@+id/sign_up_label"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:text="@string/sign_up"
			         android:layout_marginLeft="10dp"/>
			     <TextView 
			         android:id="@+id/register_here"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:text="@string/register_here"
			         android:paddingLeft="40dp"
			         android:textSize="17sp"
			         android:clickable="true"/>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginTop="80dp"
                android:orientation="horizontal"
                android:padding="5dp" >

                <ImageButton
                    android:id="@+id/login_google"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/login_google_description"
                    android:background="@drawable/login_google" />

                <ImageButton
                    android:layout_marginTop="2dp"
                    android:id="@+id/login_facebook"
                    android:layout_width="150dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/login_facebook_description"
                    android:background="@drawable/login_facebook" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</merge>
